# ts-inverse

./: .env.template  .gitignore  README.md  pyproject.toml
data/: 00_download_datasets.ipynb  01_process_datasets.ipynb  02_explore_datasets.ipynb  README.md
data/_aux_datasets/: README.md
data/_model_dataset_gradients/: README.md
notebooks/: 00_fcn_experiments.ipynb  00_gru_experiments.ipynb  00_seq2seq_experiments.ipynb  00_tcn_experiments.ipynb  00_time-series_reconstruction_evaluation_experiments.ipynb  00_vae_experiments.ipynb  00_vm_experiments.ipynb  02_one_model_forecasting_central_learning.ipynb  04_baseline_learning_to_invert_reconstruction_attack.ipynb  04_baselines_reconstruction_attack.ipynb  04_baselines_results_wandb.ipynb  05_ts_inverse_multivariate_reconstruction_attack.ipynb  05_ts_inverse_reconstruction_attack.ipynb  05_ts_inverse_reconstruction_attack_gradient_loss_0.ipynb  05_ts_inverse_reconstruction_attack_gradient_loss_1.ipynb  05_ts_inverse_reconstruction_attack_gradient_loss_2.ipynb  05_ts_inverse_reconstruction_attack_periodicity.ipynb  05_ts_inverse_reconstruction_attack_quantile.ipynb  05_ts_inverse_reconstruction_attack_reg_combinations.ipynb  05_ts_inverse_reconstruction_attack_reg_differential_privacy.ipynb  05_ts_inverse_reconstruction_attack_rnn.ipynb  05_ts_inverse_reconstruction_attack_trend.ipynb  06_final_results_wandb.ipynb
notebooks/forecasting_experiment_notebooks/: 02_forecasting_results_wandb.ipynb  02_multiple_consumers_one_model_predictions_federated_learning.ipynb  (+1 more)
task_scripts/: start_jupyter_tmux.sh
(+28 files in other folders)
